Fix image alignment

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -33,6 +33,9 @@ nav {
 img {
   max-width: 100%;
   display: block;
+}
+
+.blog img {
   margin: 1rem auto;
 }
 
